2003-07-22  Dave Love  <fx@gnu.org>

	* xfns.c [HAVE_PNG]: Consider both png.h and libpng/png.h.

2003-07-21  Stefan Monnier  <monnier@cs.yale.edu>

	* alloc.c (MARK_STRING, UNMARK_STRING, STRING_MARKED_P)
	(GC_STRING_CHARS, string_bytes): Use ARRAY_MARK_FLAG rather than
	MARKBIT as the gcmarkbit for strings.

2003-07-21  Richard M. Stallman  <rms@gnu.org>

	* s/openbsd.h (LD_SWITCH_SYSTEM_TEMACS): Add undef.

	* fns.c (Flocale_info): Renamed from Flanginfo.  Doc fixes.
	(syms_of_fns): Corresponding change.

	* alloc.c (syms_of_alloc): Doc fixes.

2003-07-20  Han Boetes  <han@mijncomputer.nl>  (tiny change)

	* s/netbsd.h: Use -Wl syntax.

2003-07-17  Richard M. Stallman  <rms@gnu.org>

	* xterm.c (xim_initialize): Redo 6/24 change.

2003-07-15  Stefan Monnier  <monnier@cs.yale.edu>

	* buffer.c (copy_overlays): Use EMACS_INT for positions.
	(Fswitch_to_buffer): Don't signal an error when switching to the same
	buffer in a dedicated window.

	* alloc.c: Use bitmaps for cons, as was done for floats.
	(init_float, init_cons): Let the normal code allocate the first block.
	(CONS_BLOCK_SIZE): Redefine based on BLOCK_BYTES and bitmap size.
	(CONS_BLOCK, CONS_INDEX, CONS_MARKED_P, CONS_MARK, CONS_UNMARK):
	New macros.
	(struct cons_block): Move conses to the beginning.  Add gcmarkbits.
	(Fcons): Use lisp_align_malloc and CONS_UNMARK.
	(live_cons_p): Check the pointer is not past the `conses' array.
	(mark_maybe_object, mark_maybe_pointer): Use CONS_MARKED_P.
	(mark_object, mark_buffer): Use CONS_MARKED_P and CONS_MARK.
	(survives_gc_p): Use CONS_MARKED_P and simplify.
	(gc_sweep): Use CONS_MARKED_P, CONS_UNMARK, and lisp_align_free.

2003-07-13  Paul Eggert  <eggert@twinsun.com>

	GCC 3.3 (sparc) no longer puts "int foo = 0;" into data; it
	puts it into BSS instead, at least on Solaris 8 and 9.
	This is a valid optimization, and it may occur on other platforms,
	so Emacs should not assume that initializing a static variable to
	zero puts it into data.